--- a/testgit.html
+++ b/testgit.html
@@ -5,12 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>王珮琳</h1>
-    <h2>王珮琳</h2>
-    <h3>王珮琳</h3>
-    <h4>王珮琳</h4>
-    <h5>王珮琳</h5>
-    <h6>王珮琳</h6>
+    <h1>前端小白</h1>
+    <h2>前端小白</h2>
+    <h3>前端小白</h3>
+    <h4>前端小白</h4>
+    <h5>前端小白</h5>
+    <h6>前端小白</h6>
     <a href="https://www.baidu.com" target="_blank">百度一下</a>
     <ol>
         <li>html</li>
@@ -34,10 +34,21 @@
     <tr>
         <td>11</td>
         <td>22</td>
-
+        <td>33</td>
+        <td>44</td>
 
     </tr>
     </table>
-
+    <div id="div1">这是一个前端小白的练习</div>
+    <div id="div2">这是一个前端小白的练习</div>
+    <sapn>这是一个前端小白的练习</sapn>
+    <sapn>这是一个前端小白的练习</sapn>
+    <sapn>这是一个前端小白的练习</sapn>
+    <sapn>这是一个前端小白的练习</sapn>
+    <div><span style="color: #ff0000;">华为</span>是全球领先的ICT(信息与通信)基础设施和智能终端提供商,致力于把数字世界带入每个人、每个家庭、每个组织,构建万物互联的智能世界。</div>
+    <p>这是一个小白</p>
+    <p>
+        这是一个小白
+    </p>
 </body>
 </html>
