--- a/yanshitupian/lianxi2.html
+++ b/yanshitupian/lianxi2.html
@@ -5,8 +5,8 @@
     <title>水平导航菜单</title>
     <style>
         *{
-            margin: 0;
-            padding: 0;
+            margin: 0px;
+            padding:0px ;
         }
         li{
             list-style: none;
@@ -29,13 +29,30 @@
         #list .submenu >li:hover{
             background: #999;
         }
+        #list .submenu > li:hover {
+            background: #999;
+        }
+        #list .item > a {
+            color: #fff;
+            text-decoration: none;
+            width: 100px;
+            height: 30px;
+            display: block;
+        }
     </style>
 </head>
 <body>
     <ul id="list">
         <li class="item"><a href=""></a>ONE</li>
         <li class="item"><a href=""></a>TWO</li>
-        <li class="item"><a href=""></a>THREE</li>
+        <li class="item"><a href=""></a>THREE
+          <ul class="submenu">
+              <li>001</li>
+              <li>002</li>
+              <li>003</li>
+              <li>004</li>
+          </ul>
+        </li>
     </ul>
 
 </body>
