--- a/testgit.html
+++ b/testgit.html
@@ -5,13 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>前端小白</h1>
+    <h1 style="color: red;background: green;">前端小白</h1>
     <h2>前端小白</h2>
     <h3>前端小白</h3>
     <h4>前端小白</h4>
     <h5>前端小白</h5>
     <h6>前端小白</h6>
-    <a href="https://www.baidu.com" target="_blank">百度一下</a>
+    <a href="https://www.baidu.com" >百度一下</a>
     <ol>
         <li>html</li>
         <li>css</li>
