--- a/testgit.html
+++ b/testgit.html
@@ -5,32 +5,33 @@
     <title>Title</title>
 </head>
 <body>
-    <h1 style="color: red;background: green;">前端小白</h1>
-    <h2>前端小白</h2>
-    <h3>前端小白</h3>
-    <h4>前端小白</h4>
-    <h5>前端小白</h5>
-    <h6>前端小白</h6>
-    <a href="https://www.baidu.com" >百度一下</a>
-    <ol>
-        <li>html</li>
-        <li>css</li>
-        <li>javascript</li>
-        <li>
-            <a href="https;//www.baidu.com">淘宝</a></li>
-        <li><a href="">百度</a></li>
-    </ol>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-    </ul>
-    <img src="dog.jpg" alt="图片加载失败" title="这是一个表情包" >
-    <img src="http://g.hiphotos.baidu.com/image/h%3D300/sign=ecd44d0923738bd4db21b431918a876c/f7246b600c338744dd981da85c0fd9f9d62aa080.jpg" alt="">
-    <a href="http://www.baidua,com">
-        <img src="https://www.baidu.com/img/bd_logo1.png" alt="">
-    </a>
-    <table border="1">
+<h1 style="color: red;background: green;">前端小白</h1>
+<h2>前端小白</h2>
+<h3>前端小白</h3>
+<h4>前端小白</h4>
+<h5>前端小白</h5>
+<h6>前端小白</h6>
+<a href="https://www.baidu.com">百度一下</a>
+<ol>
+    <li>html</li>
+    <li>css</li>
+    <li>javascript</li>
+    <li>
+        <a href="https;//www.baidu.com">淘宝</a></li>
+    <li><a href="">百度</a></li>
+</ol>
+<ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+</ul>
+<img src="dog.jpg" alt="图片加载失败" title="这是一个表情包">
+<img src="http://g.hiphotos.baidu.com/image/h%3D300/sign=ecd44d0923738bd4db21b431918a876c/f7246b600c338744dd981da85c0fd9f9d62aa080.jpg"
+     alt="">
+<a href="http://www.baidua,com">
+    <img src="https://www.baidu.com/img/bd_logo1.png" alt="">
+</a>
+<table border="1">
     <tr>
         <td>11</td>
         <td>22</td>
@@ -38,17 +39,17 @@
         <td>44</td>
 
     </tr>
-    </table>
-    <div id="div1">这是一个前端小白的练习</div>
-    <div id="div2">这是一个前端小白的练习</div>
-    <sapn>这是一个前端小白的练习</sapn>
-    <sapn>这是一个前端小白的练习</sapn>
-    <sapn>这是一个前端小白的练习</sapn>
-    <sapn>这是一个前端小白的练习</sapn>
-    <div><span style="color: #ff0000;">华为</span>是全球领先的ICT(信息与通信)基础设施和智能终端提供商,致力于把数字世界带入每个人、每个家庭、每个组织,构建万物互联的智能世界。</div>
-    <p>这是一个小白</p>
-    <p>
-        这是一个小白
-    </p>
+</table>
+<div id="div1">这是一个前端小白的练习</div>
+<div id="div2">这是一个前端小白的练习</div>
+<sapn>这是一个前端小白的练习</sapn>
+<sapn>这是一个前端小白的练习</sapn>
+<sapn>这是一个前端小白的练习</sapn>
+<sapn>这是一个前端小白的练习</sapn>
+<div><span style="color: #ff0000;">华为</span>是全球领先的ICT(信息与通信)基础设施和智能终端提供商,致力于把数字世界带入每个人、每个家庭、每个组织,构建万物互联的智能世界。</div>
+<p>这是一个小白</p>
+<p>
+    这是一个小白
+</p>
 </body>
 </html>
