--- a/practice.html
+++ b/practice.html
@@ -28,7 +28,7 @@
         </ul>
         <ul>
             <img src="dog.jpg" alt="图片加载失败" title="这是一个表情包">
-            <img srchttp://g.hiphotos.baidu.com/image/h%3D300/sign=ecd44d0923738bd4db21b431918a876c/f7246b600c338744dd981da85c0fd9f9d62aa080.jpg="" alt="">
+            <img src=http://g.hiphotos.baidu.com/image/h%3D300/sign=ecd44d0923738bd4db21b431918a876c/f7246b600c338744dd981da85c0fd9f9d62aa080.jpg=" alt="">
             <a href="https://www.baidu.com" target="_blank"><img src="https://www.baidu.com/img/baidu_jgylogo3.gif" alt=""></a>
         </ul>
         <table border="">
