--- a/水平菜单练习practice.html
+++ b/水平菜单练习practice.html
@@ -9,8 +9,8 @@
             height: 30px;
         }
         *{
-            margin: 0px;
-            padding: 0px;
+            margin: 0;
+            padding: 0;
         }
         li{
             list-style: none;
