--- a/天猫练习.html
+++ b/天猫练习.html
@@ -36,28 +36,19 @@
         #list2 .submenu{
             display: none;
         }
-        #list2 .submenu>li {
+        #list2，#list1 .submenu>li {
             cursor: pointer;
         }
-        }
-        #list1 .submenu>li {
-            cursor: pointer;
-        }
+
         #list2 .item:hover > .submenu {
             display: block;
         }
-        #list1 .item > a {
+        #list1,list2 .item > a {
             color: #000000;
             text-decoration: none;
             height: 30px;
             display: block;
-        }
-        #list2 .item > a {
-            color: #000000;
-            text-decoration: none;
-            height: 30px;
-            display: block;
-        }
+        }k
         #list1 .item > a:hover{
             color: red;
         }
