--- a/tmall/index.html
+++ b/tmall/index.html
@@ -6,31 +6,47 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="font/iconfont">
+    <link rel="stylesheet" href="font/iconfont.css">
 </head>
 <body>
 <div id="header">
-    <p id="login-info"><span>喵，欢迎来天猫</span>
+    <div class="wrapper">
+    <p id="login-info">
+        <span>喵，欢迎来天猫</span>
         <a href="">请登录</a>
         <a href="">免费注册</a>
     </p>
         <ul id="quick-menu">
-            <li class="menu triangle"><a href="">我的淘宝</a>
-            <ul>
+            <li class="menu triangle">
+                <a href="">我的淘宝</a>
+            <ul class="submenu">
                 <li>已买到的宝贝</li>
                 <li>已卖出的宝贝</li>
-            </ul></li>
-            <li class="menu"><a href="">购物车<span>0</span>件</a></li>
-            <li class="menu"><a href="">收藏夹</a>
-            <ul>
+            </ul>
+                <div class="arrow"></div>
+            </li>
+            <li class="menu">
+                <i class="iconfont icon-gouwuchekong"></i>
+                <a href="">购物车<span>0</span>件</a></li>
+            <li class="menu triangle">
+                <a href="">收藏夹</a>
+            <ul class="submenu">
                 <li>收藏的宝贝</li>
                 <li>收藏的商家</li>
-            </ul></li>
-            <li class="menu"><a href="">手机版</a></li>
+            </ul>
+                <div class="arrow"></div>
+            </li>
+            <li class="menu">
+                <i class="iconfont icon-shouji"></i><a href="">手机版</a></li>
             <li class="menu"><a href="">淘宝网</a></li>
-            <li class="menu"><a href="">商家支持</a></li>
-            <li class="menu"><a href="">网站导航</a></li>
+            <li class="menu triangle"><a href="">商家支持</a></li>
+            <li class="menu triangle">
+                <i class="iconfont icon-daohang"></i>
+                <a href="">网站导航</a>
+                <div class="arrow"></div>
+            </li>
         </ul>
         </div>
+</div>
 </body>
 </html>
